2009-01-07  KOIE Hidetaka / nom

	* mhc-palm.rb: fix typo of variable name.

2008-10-08 Kazuhiro Ito / nom

	* ruby-ext/lib/mhc-palm.rb, ruby-ext/lib/mhc-schedule.rb:
	conform to Ruby 1.87

2008-09-29 Kazuhiro Ito, KOIE Hidetaka / nom

	* mhc_pilib.c:
	Conforming to pilot-link 0.12 or later, not compatible with 0.11.

2008-07-04  David Bremner / Yoshinari Nomura <nom@quickhack.net>

        * emacs/mhc-draft.el, emacs/mhc.el:
        (mhc-draft-toggle-done), (mhc-todo-toggle-done): new functions.

2008-03-06  Hideyuki SHIRAI  <shirai@quickhack.net>

	* emacs/mhc-calendar.el (mhc-calendar-mouse-icon-function): New
	function.
	(mhc-calendar-mouse-goto-date): Call
	mhc-calendar-mouse-icon-function and check return value.

	* emacs/mhc-xmas.el (mhc-xmas-icon-call-function): Return if call
	mhc-xmas-icon-function.

	* emacs/mhc-e21.el (mhc-e21-icon-call-function): Return t if call
	mhc-e21-icon-function.

2008-02-21  Hideyuki SHIRAI  <shirai@quickhack.net>

	* emacs/mhc.el (mhc-mode-map): Add mouse-1 and mouse-2 keybind for
	mhc-calendar.

	* emacs/mhc-wl.el (mhc-wl-goto-message): New function.

	* emacs/mhc-mew.el (mhc-mew-draft-translate): Fix
	case-fold-search. Fix boundary check.
	(mhc-mew-goto-message): New function.

	* emacs/mhc-gnus.el (mhc-gnus-goto-message): New function.

	* emacs/mhc-e21.el (mhc-put-icon): Put mouse-face property.

	* emacs/mhc-cmail.el (mhc-cmail-goto-message): New function.

	* emacs/mhc-calendar.el (mhc-calendar-use-help-echo): New user
	option.
	(mhc-calendar-mode-map): Add define for mouse-1.
	(mhc-calendar/make-rectangle): Add text-properties, mouse-face and
	help-echo.
	(mhc-calendar-mouse-goto-date-view): New command.
	(mhc-calendar-mouse-goto-date): Ditto.
	(mhc-calendar/create-buffer): Don't call
	mhc-calendar/put-property-date().
	(mhc-calendar/put-property-date): Remove function.
	(mhc-calendar/date-format): New variable.
	(mhc-calendar/get-contents): New function.

2007-12-05  KOIE Hidetaka <hide@koie.org> / nom
